<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/icon_new"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_new">
    </item>
    
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/icon_save"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_save">
    </item>
    
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/icon_cancel"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_cancel">
    </item>
    
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/icon_edit"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_edit">
    </item>
    
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/icon_delete"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_delete">
    </item>
    
    <item
        android:id="@+id/action_preferences"
        android:title="@string/notificationPreferences_title">
    </item>

</menu>